--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next-themes": "0.0.15",
     "react": "17.x",
     "react-dom": "17.x",
+    "react-parallax": "^3.3.0",
     "react-rough-notation": "^1.0.1"
   },
   "devDependencies": {
