--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^0.21.1",
     "next": "10.x",
     "next-themes": "0.0.15",
+    "nodemailer": "^6.7.2",
     "react": "17.x",
     "react-dom": "17.x",
     "react-parallax": "^3.3.0",
